ppapi/native_client/tests/ppapi_browser/bad/ppapi_bad_doesnotexist.nmf
{
  "program": {
    "x86-32": {"url": "doesnotexist.nexe"},
    "x86-64": {"url": "doesnotexist.nexe"},
    "arm": {"url": "doesnotexist.nexe"},
    "portable": {"url": "doesnotexist.pexe"}
  }
}
